--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@
 /* header styles */
 header{
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-position: bottom right, top left;
+    background-repeat: no-repeat;
+    background-size: auto, contain;
 }
 
 /* Nav rilated styles */
@@ -53,3 +57,37 @@ nav ul li a{
 
 /* Banner related styles */
 
+.banner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 1200px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.banner .banner_content{
+    max-width: 585px;
+
+}
+.banner .banner_content h4{
+    color: #474747;
+    font-size: 35px;
+    font-weight: 600;
+    margin:0 0 10px 0;
+}
+.banner .banner_content h2{
+    color: #181818;
+    font-size: 65px;
+    font-weight: 700;
+    margin:0 0 10px 0;
+}
+.banner .banner_content p{
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+}
+.banner_image img {
+    margin-right: -120px;
+    max-width: 500px;
+    margin-bottom: 0;
+}
