--- a/styles/style.css
+++ b/styles/style.css
@@ -91,3 +91,50 @@ nav ul li a{
     max-width: 500px;
     margin-bottom: 0;
 }
+
+/* About area css  */
+
+.about{
+    width: 1200px;
+    max-width: 100%;
+    margin: 130px auto;
+}
+.about .about_content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 130px;
+    text-align: center;
+    background-color: #FFF8F3;
+}
+.about .about_content h2{
+    color:#181818;
+    font-size: 35px;
+    font-weight: 700;
+}
+.about .about_content p{
+    color:#757575;
+    font-size: 18px;
+    line-height: 30px;
+}
+.about_info{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 20px;
+}
+.about_info h5{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    margin: 0;
+}
+.about_info p{
+    color: #181818;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    margin: 0;
+}
