--- a/styles/style.css
+++ b/styles/style.css
@@ -108,12 +108,12 @@ nav ul li a{
     text-align: center;
     background-color: #FFF8F3;
 }
-.about .about_content h2{
+.section_title{
     color:#181818;
     font-size: 35px;
     font-weight: 700;
 }
-.about .about_content p{
+.section_description{
     color:#757575;
     font-size: 18px;
     line-height: 30px;
@@ -137,4 +137,33 @@ nav ul li a{
     font-weight: 700;
     line-height: 30px;
     margin: 0;
+}
+
+/* what i do sections styles */
+
+.wid_container{
+    width: 1200px;
+    max-width: 100%;
+    margin: 130px auto;
+}
+.wid_container .wid{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 130px;
+    text-align: center;
+}
+.skills{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    text-align: left;
+}
+.skills .item{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
