--- a/styles/style.css
+++ b/styles/style.css
@@ -86,10 +86,11 @@ nav ul li a{
     font-size: 18px;
     line-height: 30px;
 }
-.banner_image img {
+.banner_image img{
     margin-right: -120px;
-    max-width: 500px;
+    max-width: 580px;
     margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 /* About area css  */
@@ -166,4 +167,21 @@ nav ul li a{
     border-radius: 5px;
     background: #FFF;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* Resume section Styles */
+.resume_container{
+    width: 1200px;
+    max-width: 100%;
+    margin: 130px auto;
+}
+.resume{
+    text-align: center;
+}
+.resume_content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+    gap: 70px;
 }
